# cli

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  SECURITY.md  audit.toml  contributing.md  deny.toml  docker-compose.yml  sd.json  user.ext
.cargo/: audit.toml  config.toml
.github/: copilot-instructions.md
.github/scripts/: build_packages.sh  cargo_build.ps1  cargo_build.sh  cargo_test.sh  cosmian_tests.sh  prepare_oracle_hsm.sh  prepare_oracle_hsm_sql_commands.sh  prepare_oracle_no_okv.sh  prepare_oracle_with_okv.sh  release.sh  test_docker_image.sh
.github/scripts/luks/: docker-compose.yml  test_integration.sh
.github/scripts/oracle/: README_HSM.md  build_docker.sh  docker-compose.yml  run_sql_commands.sh  set_hsm.sh  set_okv.sh
.github/scripts/squid/: squid.conf
.github/workflows/: cargo_publish.yml  forward_proxy.yml  luks_integration.yml  main.yml  main_base.yml  main_release.yml
crate/cli/: Cargo.toml
crate/cli/src/: commands.rs  config.rs  lib.rs  main.rs  proxy_config.rs
crate/cli/src/actions/: markdown.rs
crate/cli/src/actions/findex_server/tests/: auth_tests.rs
crate/cli/src/error/: mod.rs
crate/cli/src/tests/: mod.rs
crate/cli/src/tests/findex_server/: auth_tests.rs  datasets.rs  encryption_tests.rs  mod.rs  permissions.rs  search_options.rs
crate/cli/src/tests/findex_server/findex/: basic.rs  permissions.rs  utils.rs
crate/cli/src/tests/kms/: access.rs  auth_tests.rs  hash.rs  mac.rs  mod.rs  version.rs
crate/cli/src/tests/kms/attributes/: delete.rs  get.rs  set.rs  test_set_attribute.rs
crate/cli/src/tests/kms/certificates/: certify.rs  encrypt.rs  export.rs  get_attributes.rs  import.rs  validate.rs
crate/cli/src/tests/kms/cover_crypt/: access_structure.rs  encrypt_decrypt.rs  master_key_pair.rs  rekey.rs  user_decryption_keys.rs
crate/cli/src/tests/kms/derive_key/: derive_key_tests.rs
crate/cli/src/tests/kms/elliptic_curve/: create_key_pair.rs  encrypt_decrypt.rs  mod.rs
crate/cli/src/tests/kms/google_cmd/: identities.rs  keypairs.rs  keypairs_enabling.rs  mod.rs
crate/cli/src/tests/kms/hsm/: encrypt_decrypt.rs  mod.rs  revoke_destroy.rs  wrap_with_hsm_key.rs
crate/cli/src/tests/kms/rsa/: create_key_pair.rs  encrypt_decrypt.rs  mod.rs
crate/cli/src/tests/kms/secret_data/: create_secret.rs  kmip_operations.rs  mod.rs  wrap_secret.rs
crate/cli/src/tests/kms/shared/: destroy.rs  export.rs  export_import.rs  import.rs  import_export_encodings.rs  import_export_wrapping.rs  locate.rs  revoke.rs  wrap_unwrap.rs
crate/cli/src/tests/kms/symmetric/: create_key.rs  encrypt_decrypt.rs  rekey.rs
crate/cli/src/tests/kms/utils/: extract_uids.rs
crate/pkcs11/module/: Cargo.toml
crate/pkcs11/module/src/: lib.rs  objects_store.rs  pkcs11.rs  sessions.rs  tests.rs
crate/pkcs11/module/src/core/: attribute.rs  mechanism.rs  object.rs
crate/pkcs11/module/src/traits/: backend.rs
crate/pkcs11/oracle/: README_HSM.md  README_OKV.md  cosmian_okv.toml  docker-compose.yml
crate/pkcs11/provider/: Cargo.toml  README.md
crate/pkcs11/provider/src/: backend.rs  kms_object.rs  lib.rs  logging.rs  pkcs11_certificate.rs  pkcs11_data_object.rs  pkcs11_private_key.rs  pkcs11_public_key.rs  tests.rs
crate/pkcs11/provider/src/error/: mod.rs
crate/sqlserver_ekm/: Dockerfile  Dockerfile.arm64  README.md
crate/test_kms_server/src/: test_server.rs
documentation/: mkdocs.yml
documentation/docs/: index.md  installation.md
documentation/docs/cli/: main_commands.md
documentation/docs/pkcs11/: luks.md
documentation/docs/pkcs11/oracle/: tde.md
ui/: package-lock.json
