[workspace]
default-members = ["crate/cli", "crate/pkcs11/provider"]
members = ["crate/cli", "crate/pkcs11/module", "crate/pkcs11/provider"]
# Exclude crates from KMS
exclude = ["kms"]

# Do that if you don't want to enable `dev` feature by default due to the `dev-dependencies` of the cli.
# For more details, read: https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
# note: resolver defaults to 2 in 2021 edition crate, but defaults to 1 in virtual workspace
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Bruno Grieder <bruno.grieder@cosmian.com>",
    "Emmanuel Coste <emmanuel.coste@cosmian.com>",
]
license = "BUSL-1.1" # "Business Source License 1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/cli"
keywords = ["cosmian_cli", "kms", "findex", "findex-server", "cosmian"]
categories = ["security"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev]
strip = "debuginfo"
incremental = false

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
actix-server = { version = "2.6", default-features = false }
base64 = "0.22"
clap = { version = "4.5", default-features = false }
cosmian_config_utils = "0.2"
cosmian_crypto_core = { version = "10.2", default-features = false, features = [
    "ser",
] }
cosmian_findex_cli = { path = "findex-server/crate/cli", version = "0.4.1" }
cosmian_kms_cli = { path = "kms/crate/cli", version = "5.6.1" }
test_kms_server = { path = "kms/crate/test_kms_server", version = "5.6.1" }
cosmian_http_client = "0.2"
cosmian_logger = "0.2"
der = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false }
leb128 = "0.2"
log = { version = "0.4", default-features = false }
num-format = "0.4"
pem = "3.0"
pkcs11-sys = "0.2"
openssl = { version = "0.10", default-features = false }
rand = "0.9.1"
reqwest = { version = "0.11", default-features = false }
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.27", default-features = false }
thiserror = "2.0"
tokio = { version = "1.45", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.5"
uuid = { version = "=1.11.1", features = ["v4", "serde"] }
x509-cert = { version = "0.2", default-features = false }
x509-parser = "0.17"
zeroize = { version = "1.8", default-features = false }
# KMS deps
bitflags = "2.9"
num-bigint-dig = { version = "0.8", default-features = false }
time = "0.3"
num-traits = "0.2"
actix-rt = "2.10"
actix-web = { version = "4.11", default-features = false }
chrono = "0.4"
native-tls = { version = "0.2", default-features = false }
tempfile = "3.20"
async-trait = "0.1"
lru = "0.12"
num_cpus = "1.17"
libloading = "0.8"
# Findex deps
cosmian_findex = "8.0"
cosmian_sse_memories = "8.0"
async-sqlite = { version = "0.4" }
